Bug 464040 - Yakuake crash when git commit raises pinentry-qt/kwrite while konsole text is being selected
Summary: Yakuake crash when git commit raises pinentry-qt/kwrite while konsole text is...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
: 466032 467171 468344 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-09 09:25 UTC by Andreas Sturmlechner
Modified: 2023-05-01 23:36 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2023-01-09 09:25:31 UTC
Application: yakuake (22.12.0)

Qt Version: 5.15.7
Frameworks Version: 5.101.0
Operating System: Linux 5.15.85-gentoo x86_64
Windowing System: X11
Distribution: "Gentoo Base System release 2.9"
DrKonqi: 5.26.4 [KCrashBackend]

-- Information about the crash:
This has happened the second time to me now, so it is reproducible. It happens when yakuake is dropped back out of focus (so being minimised) in favor of kwrite or pinentry-qt being raised while "left mousebutton" is still pressed to select text in yakuake.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Yakuake (yakuake), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[KCrash Handler]
#6  0x00007f290606acf7 in QArrayData::data (this=<optimized out>) at /usr/include/qt5/QtCore/qarraydata.h:62
#7  QTypedArrayData<Konsole::Character>::data (this=<optimized out>) at /usr/include/qt5/QtCore/qarraydata.h:209
#8  QTypedArrayData<Konsole::Character>::begin (this=<optimized out>) at /usr/include/qt5/QtCore/qarraydata.h:212
#9  QVector<Konsole::Character>::realloc (this=this@entry=0x563ba039a168, aalloc=540429776, options=..., options@entry=...) at /usr/include/qt5/QtCore/qvector.h:710
#10 0x00007f290606a5d2 in QVector<Konsole::Character>::detach (this=0x563ba039a168) at /usr/include/qt5/QtCore/qvector.h:405
#11 QVector<Konsole::Character>::detach (this=0x563ba039a168) at /usr/include/qt5/QtCore/qvector.h:397
#12 QVector<Konsole::Character>::data (this=0x563ba039a168) at /usr/include/qt5/QtCore/qvector.h:134
#13 Konsole::Screen::setSelectionEnd (this=this@entry=0x563ba00dd820, x=x@entry=55, y=<optimized out>, trimTrailingWhitespace=trimTrailingWhitespace@entry=false) at /var/tmp/portage/kde-apps/konsole-22.12.0/work/konsole-22.12.0/src/Screen.cpp:1792
#14 0x00007f290606c5ce in Konsole::ScreenWindow::setSelectionEnd (this=0x563ba030cc80, column=55, line=15, trimTrailingWhitespace=<optimized out>) at /var/tmp/portage/kde-apps/konsole-22.12.0/work/konsole-22.12.0/src/ScreenWindow.cpp:145
#15 0x00007f29060cc8af in Konsole::TerminalDisplay::extendSelection (this=this@entry=0x563ba00debf0, position=...) at /usr/include/qt5/QtCore/qpoint.h:130
#16 0x00007f29060cccef in Konsole::TerminalDisplay::mouseMoveEvent (this=0x563ba00debf0, ev=0x7ffc2c3d25b0) at /var/tmp/portage/kde-apps/konsole-22.12.0/work/konsole-22.12.0/src/terminalDisplay/TerminalDisplay.cpp:1284
#17 0x00007f2934ce153e in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#18 0x00007f2934c9f6ef in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#19 0x00007f2934ca71ba in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007f29342df0c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#21 0x00007f2934ca5cd6 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007f2934cfa2ca in ?? () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007f2934cfd435 in ?? () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007f2934c9f6ef in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#25 0x00007f29342df0c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#26 0x00007f29346d050d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#27 0x00007f29346b03eb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#28 0x00007f292f36c62a in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#29 0x00007f2931f1478b in g_main_dispatch (context=0x7f2928005010) at ../glib-2.74.4/glib/gmain.c:3454
#30 g_main_context_dispatch (context=0x7f2928005010) at ../glib-2.74.4/glib/gmain.c:4172
#31 0x00007f2931f14a38 in g_main_context_iterate (context=context@entry=0x7f2928005010, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib-2.74.4/glib/gmain.c:4248
#32 0x00007f2931f14aef in g_main_context_iteration (context=0x7f2928005010, may_block=1) at ../glib-2.74.4/glib/gmain.c:4313
#33 0x00007f293432f6f8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#34 0x00007f29342ddb53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#35 0x00007f29342e5e40 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#36 0x0000563b9ef41487 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-apps/yakuake-22.12.0/work/yakuake-22.12.0/app/main.cpp:74
[Inferior 1 (process 2592) detached]

The reporter indicates this bug may be a duplicate of or related to bug 435439.

Reported using DrKonqi
Comment 1 Justin Zobel 2023-02-03 06:07:53 UTC
Thank you for the report Andreas. In order to debug this further the developers will need a crash report with all debug symbols. For information on how to obtain this please see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
Comment 2 Andreas Sturmlechner 2023-02-03 08:45:41 UTC
I don't think there's anything relevant missing.
Comment 3 ninjalj 2023-04-29 00:06:59 UTC
*** Bug 467171 has been marked as a duplicate of this bug. ***
Comment 4 ninjalj 2023-04-29 00:08:55 UTC
*** Bug 468344 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-04-29 00:15:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/850
Comment 6 ninjalj 2023-04-29 23:49:12 UTC
*** Bug 466032 has been marked as a duplicate of this bug. ***
Comment 7 Kurt Hindenburg 2023-05-01 23:36:35 UTC
Git commit 4682c1cbe760e67383d00f0144c6581647767d02 by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 01/05/2023 at 23:22.
Pushed by hindenburg into branch 'master'.

Invalidate selection reference points on resize

These are used when extending a (possibly empty) selection via
shift+LMB.  When resizing, a point of reference may easily be out of
bounds if it was beyond the last line written.

M  +3    -0    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/4682c1cbe760e67383d00f0144c6581647767d02