Invalidate selection reference points on resize

These are used when extending a (possibly empty) selection via
shift+LMB.  When resizing, a point of reference may easily be out of
bounds if it was beyond the last line written.

BUG: 464040
(cherry picked from commit 4682c1cbe760e67383d00f0144c6581647767d02)